syntax = "proto3";

import "events.proto";

option java_multiple_files = true;
option java_package = "is.yarr.qilletni.grpc.gen.events.general";

service General {
  rpc Delete(DeleteEvent) returns (EmptyResponse);
  rpc Recolor(RecolorEvent) returns (EmptyResponse);
}

message DeleteEvent {
  string component_id = 1;
}

message RecolorEvent {
  ModifyEvent modify = 1;
  int32 color = 2;
}
